<resources>
    <string name="app_name">衣带保父母端</string>

    <string name="about_content">
            衣带保是一款智能呵护腰带。能够智能检测意外跌倒，及时打开气囊减少高达90%的冲击力，
        保护老人两侧髋关节、臀部、尾椎骨以及骶骨等容易受伤部位，降低人身伤害。衣带保根据人体工学设计，
        穿戴舒服，美观时尚!
    </string>

    <string name="action_success">操作成功</string>
    <string name="action_failed">操作失败</string>
    <string name="bracelet_parent">衣带保父母端 V</string>
    <string name="feedback">意见反馈</string>
    <string name="user_agreement">用户协议</string>
    <string name="channel_name">衣带保父母端</string>
    <string name="channel_description">父母端蓝牙扫描服务后台运行中</string>
    <string name="contact_nothing">您的关联子女端目前\n还未给您设定快速联系人</string>
    <string name="permission_denied">相关权限被拒绝</string>
    <string name="input_title">请输入标题</string>
    <string name="input_content">请输入内容</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">请输入短信验证码</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="commit">提交</string>
    <string name="sure">确定</string>
    <string name="account_login_other_device">您的账号已在其他设备上登录！</string>
    <string name="confirm_quit">确认退出</string>
    <string name="verification_code">获取验证码</string>
    <string name="account_or_password_incorrect">账号密码校验错误</string>
    <string name="phone_incorrect">手机号格式不正确</string>
    <string name="login_by_code">短信登录</string>
    <string name="login_by_pwd">密码登录</string>
    <string name="login">登录</string>
    <string name="resister_new_account">新注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="code_later">%d秒后获取</string>
    <string name="person_age">%d岁</string>
    <string name="integral">%f积分</string>
    <string name="register">注册</string>
    <string name="accept_user_agreement">注：使用本软件表示接受该</string>
    <string name="send_success">短信发送成功</string>
    <string name="register_success">注册成功</string>
    <string name="password_not_match">两次密码不一致</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_old_password">请输入原密码</string>
    <string name="input_old_phone">请输入原手机号</string>
    <string name="input_new_phone">请输入新手机号</string>
    <string name="new_password_cannot_be_the_same_as_the_original_password">新密码不能与原密码一样</string>
    <string name="confirm_new_password">请确认新密码</string>
    <string name="bluetooth_enable">蓝牙未开启</string>
    <string name="bluetooth_is_able">蓝牙已开启</string>
    <string name="please_open_bluetooth">请开启蓝牙</string>
    <string name="disconnecting_device">正在断开设备</string>
    <string name="please_disconnect_device">请先断开已连接的设备</string>
    <string name="connecting_device">正在连接设备</string>
    <string name="device_disconnected">设备失去连接</string>
    <string name="start_scan_bluetooth_device">开始扫描蓝牙设备</string>
    <string name="bluetooth_device_manager">蓝牙设备管理</string>
    <string name="scan_device">扫描设备</string>
    <string name="dialing">一键拨号</string>
    <string name="user_info_load_failed">用户信息加载失败</string>
    <string name="set_home_address_first">您还没有设置家的位置，请先去设置家庭位置！</string>
    <string name="cancel">取消</string>
    <string name="go_setting">去设置</string>
    <string name="setting">设置</string>
    <string name="connected">已连接</string>
    <string name="disconnected">未连接</string>
    <string name="electric_quantity">电量数据</string>
    <string name="charging">正在充电</string>
    <string name="charge_complete">充电完成</string>
    <string name="confirm_exit_application">确认退出程序吗？</string>
    <string name="people_nearby">附近的人</string>
    <string name="children_end">[子女端]</string>
    <string name="parent_end">[父母端]</string>
    <string name="information_list">资讯列表</string>
    <string name="information_detail">资讯详情</string>
    <string name="integral_detail">积分明细</string>
    <string name="all">全部</string>
    <string name="add">增加</string>
    <string name="used">消费</string>
    <string name="wrong_start_and_end_times">起止时间选择有误</string>
    <string name="modified_data">修改资料</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="save">保存</string>
    <string name="update_nick_name">修改昵称</string>
    <string name="update_password">修改密码</string>
    <string name="update_name">修改姓名</string>
    <string name="update_height">修改身高</string>
    <string name="update_weight">修改体重</string>
    <string name="please_upload_head_portrait">请先上传头像</string>
    <string name="portrait">头像</string>
    <string name="nick_name_not_null">昵称不能为空</string>
    <string name="sex_not_null">性别不能为空</string>
    <string name="information_saved_successfully">资料保存成功</string>
    <string name="location">位置</string>
    <string name="search">搜索</string>
    <string name="bind_device">设备绑定</string>
    <string name="bind">绑定</string>
    <string name="input_device_no">请输入设备编号</string>
    <string name="unbind_device">解绑该设备</string>
    <string name="please_input_correct_mac_address">请输入正确的mac地址</string>
    <string name="is_unbind_device">该设备已被其他用户绑定，是否强制绑定该设备？</string>
    <string name="bind_cancel">取消绑定</string>
    <string name="mandatory_binding">强制绑定</string>
    <string name="test_success">测试成功</string>
    <string name="test_failed">测试失败</string>
    <string name="sure_to_log_out">确认注销登录吗？</string>
    <string name="message_list">消息列表</string>
    <string name="update_phone">修改手机号</string>
    <string name="verify_phone">验证手机</string>
    <string name="todo_remind">待办提醒</string>
    <string name="new_task_to_do">您有新的待办任务，请及时处理</string>
    <string name="device_connected_success">设备连接成功</string>
    <string name="service_is_running">主服务运行中...</string>
    <string name="x_axis_angular_speed">X轴角速度：</string>
    <string name="y_axis_angular_speed">Y轴角速度：</string>
    <string name="z_axis_angular_speed">Z轴角速度：</string>
    <string name="x_axis_accelerated_speed">X轴加速度：</string>
    <string name="y_axis_accelerated_speed">Y轴加速度：</string>
    <string name="z_axis_accelerated_speed">Z轴加速度：</string>
    <string name="unknow">未知</string>
    <string name="disagreement">不同意该协议</string>
    <string name="scan">扫一扫</string>
    <string name="mac_address">MAC地址</string>
    <string name="ignore_capitalize_and_colon">忽略大小写和冒号</string>
    <string name="start">开始：</string>
    <string name="end">截止：</string>
    <string name="type">类型：</string>
    <string name="total_integral">总积分</string>
    <string name="today_to_do">今日待办</string>
    <string name="today_step_number">今天的运动步数</string>
    <string name="personal_integral">个人积分</string>
    <string name="health_information">健康资讯</string>
    <string name="navigation">导航</string>
    <string name="input_keyword_search">输入关键字搜索</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="nickname">昵称</string>
    <string name="name">姓名</string>
    <string name="weight_kg">体重(kg)</string>
    <string name="height_cm">身高(cm)</string>
    <string name="home_address">家庭位置</string>
    <string name="not_filled">未填写</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="display_setup">显示设置</string>
    <string name="help_center">帮助中心</string>
    <string name="feed_back">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="log_out">退出登录</string>
    <string name="input_login_password">请输入登录密码</string>
    <string name="nothing_to_do">今日暂无待办</string>
    <string name="no_data">暂无数据</string>
    <string name="find_password">找回密码</string>

    <string-array name="area_code">
        <item>中国 +86</item>
        <item>日本 +81</item>
    </string-array>

    <string-array name="date_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

</resources>
