<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llStartTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEndTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutIntegral"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_integral" />


        <TextView
            android:id="@+id/tvAllCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0" />
    </LinearLayout>

    <include layout="@layout/layout_recycler_view" />

</LinearLayout>