<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_titlebar" />

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/dp_8"
        android:background="@color/white"
        android:hint="@string/input_title"
        android:maxLines="1"
        android:padding="@dimen/dp_4"
        android:textColor="@color/black6"
        android:textColorHint="@color/black9"
        android:textSize="@dimen/sp15" />

    <include layout="@layout/layout_divider_line" />

    <EditText
        android:id="@+id/edContent"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="@dimen/dp_8"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/input_content"
        android:padding="@dimen/dp_4"
        android:textColor="@color/black6"
        android:textColorHint="@color/black9"
        android:textSize="@dimen/sp15" />

    <include layout="@layout/layout_divider_line" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/dp_8"
        android:scaleType="centerCrop"
        android:src="@mipmap/icon_add_image" />


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_button_bg"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>