<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_edit_text_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_4">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/dp_4"
            android:src="@mipmap/icon_phone" />

        <EditText
            android:id="@+id/edOldPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:hint="@string/input_old_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="#666"
            android:textColorHint="@color/black9"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_edit_text_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_4">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/dp_4"
            android:src="@mipmap/icon_code" />

        <EditText
            android:id="@+id/edCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/input_code"
            android:maxLines="1"
            android:textColor="#666"
            android:textColorHint="#999"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/verification_code"
            android:textColor="@color/blue"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_edit_text_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_4">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/dp_4"
            android:src="@mipmap/icon_phone" />

        <EditText
            android:id="@+id/edLoginPwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:hint="@string/input_login_password"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#666"
            android:textColorHint="@color/black9"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_edit_text_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_4">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/dp_4"
            android:src="@mipmap/icon_phone" />

        <EditText
            android:id="@+id/edNewPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:hint="@string/input_new_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="#666"
            android:textColorHint="@color/black9"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_18"
        android:background="@drawable/shape_button_bg"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16" />
</LinearLayout>