<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/layout_titlebar"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_edit_text_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dp_4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:src="@mipmap/icon_phone" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/edAccount"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/white"
                android:hint="@string/input_phone"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:textColor="#666"
                android:textColorHint="#999"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvArea"
                android:gravity="center"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="+86"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_edit_text_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dp_4">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/dp_4"
                android:src="@mipmap/icon_code" />

            <EditText
                android:inputType="number"
                android:id="@+id/edCode"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/input_code"
                android:maxLines="1"
                android:textColor="#666"
                android:textColorHint="#999"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/verification_code"
                android:textColor="@color/blue"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_edit_text_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dp_4">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/dp_4"
                android:src="@mipmap/icon_pwd" />

            <EditText
                android:id="@+id/edPwd"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/white"
                android:hint="@string/input_new_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#666"
                android:textColorHint="#999"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_edit_text_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dp_4">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/dp_4"
                android:src="@mipmap/icon_pwd" />

            <EditText
                android:id="@+id/edRePwd"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/white"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#666"
                android:textColorHint="#999"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/shape_button_bg"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>